add for first lesson

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TestApp</string>
+    <string name="button_start">Click me!</string>
+    <string name="first_text_view">Первый текст!</string>
+    <string name="second_text_view">Второй текст!</string>
 </resources>
